Changed sign up title label

--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -227,6 +227,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="ZoU-fn-G9a"/>
+        <segue reference="7mz-ZW-o07"/>
     </inferredMetricsTieBreakers>
 </document>
